Issue 50508 - UI - fix local password policy form
Description:  The modal width is too narrow and it overflows

relates: https://pagure.io/389-ds-base/issue/50508

Reviewed by: mreynolds(one line commit rule)

--- a/src/cockpit/389-console/src/css/ds.css
+++ b/src/cockpit/389-console/src/css/ds.css
@@ -706,9 +706,9 @@ td {
     width: 450px;
 }
 
-.ds-modal-wide .modal-content{
-    width: 850px !important;
-    min-width: 850px !important;
+.ds-modal-wide {
+    width: 875px !important;
+    min-width: 875px !important;
     vertical-align: middle;
 }
 
